Fixed drawing strings (faster on mobile) Quotes on desktop stay at bottom (not right) Added a gitignore file for Session.vim

--- a/css/style.css
+++ b/css/style.css
@@ -297,14 +297,14 @@ aside {
   aside.right {
     order: 3;
   }
-  .quote {
-    text-align: left;
-    padding-right: 0;
-    padding-left: auto;
-  }
-  .quote img {
-    margin: 0;
-  }
+  /* .quote { */
+  /*   text-align: left; */
+  /*   padding-right: 0; */
+  /*   padding-left: auto; */
+  /* } */
+  /* .quote img { */
+  /*   margin: 0; */
+  /* } */
   .flex-item {
     width: 48%;
   }
